--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "next": "13.3.1",
+    "next-optimized-images": "^2.6.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swiper": "^9.2.4",
     "swiper-react": "^1.0.0",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "webp-loader": "^0.6.0"
   }
 }
