feature: add custon enviroment

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGO_URI='mongodb+srv://ayuntamiento:Y9Szpy8jyNPJN1ro@tezonapa.sgco6dh.mongodb.net/ayuntamiento?retryWrites=true&w=majority'
 NEXT_PUBLIC_SECRET='tezonapa'
+CLOUDINARY_URL='https://api.cloudinary.com/v1_1/dxftfhixe/image/upload'
+CLOUDINARY_PRESET='crdrsp9k'
