--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@strapi/provider-upload-cloudinary": "^4.10.5",
     "@vercel/analytics": "^1.0.1",
     "autoprefixer": "10.4.14",
     "bcryptjs": "^2.4.3",
