feature: api rest completa

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,6 +6,10 @@
       "@/components/*": ["components/*"],
       "@/api/*": ["pages/api/*"],
       "@/assets/*": ["assets/*"],
+      "@/models/*": ["models/*"],
+      "@/controllers/*": ["controllers/*"],
+      "@/services/*": ["services/*"],
+      "@/db/*": ["db/*"]
     }
   }
 }
