--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "mongodb": "^5.4.0",
+    "mongoose": "^7.1.1",
     "next": "13.3.1",
     "next-auth": "^4.22.1",
     "next-optimized-images": "^1.4.2",
