--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "13.3.1",
     "next-auth": "^4.22.1",
     "next-optimized-images": "^1.4.2",
+    "pdf-lib": "^1.17.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
